--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <!-- Tabs -->
       <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
         <a href="#scroll-tab-1" class="mdl-layout__tab is-active">Tab 1</a>
-        <a href="#scroll-tab-2" class="mdl-layout__tab">Tab 2</a>
+        <a href="#scroll-tab-2" class="mdl-layout__tab">Drachenlord</a>
         <a href="#scroll-tab-3" class="mdl-layout__tab">Tab 3</a>
         <a href="#scroll-tab-4" class="mdl-layout__tab">Tab 4</a>
         <a href="#scroll-tab-5" class="mdl-layout__tab">Tab 5</a>
