--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </section>
       <section class="mdl-layout__tab-panel" id="scroll-tab-4">
         <div class="page-content"><!-- Your content goes here -->
-        <img "scr=https://www.ingame.de/assets/images/28/651/28651884-youtuber-drachenlord-rainer-winkler-anklage-koerperverletzung-landgericht-nuernburg-fuerth-2FJ917iaCMec.jpg" alt=bild1>
+         <img src="https://www.ingame.de/assets/images/28/651/28651884-youtuber-drachenlord-rainer-winkler-anklage-koerperverletzung-landgericht-nuernburg-fuerth-2FJ917iaCMec.jpg" alt="Beschreibung des Bildes">
         </div>
       </section>
       <section class="mdl-layout__tab-panel" id="scroll-tab-5">
