--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class="gallery">
   <div class="image">
-    <img src="https://i.ds.at/Mk-2SA/rs:fill:1200:600/plain/2018/09/11/drachenlord.jpg" alt="Image 1">
+    <img src="https://i.ds.at/Mk-2SA/rs:fill:1200:600/plain/2018/09/11/drachenlord.jpg" alt="drachenlord 1">
   </div>
   <div class="image">
     <img src="https://i.imgflip.com/15xqjc.jpg" alt="Image 2">
