--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <!-- Tabs -->
       <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
-        <a href="#scroll-tab-1" class="mdl-layout__tab is-active">lppex Familie</a>
+        <a href="#scroll-tab-1" class="mdl-layout__tab is-active">Kein Plan</a>
         <a href="#scroll-tab-2" class="mdl-layout__tab">Drachenlord</a>
         <a href="#scroll-tab-3" class="mdl-layout__tab">Tab 3</a>
         <a href="#scroll-tab-4" class="mdl-layout__tab">Tab 4</a>
@@ -35,7 +35,7 @@
     <main class="mdl-layout__content">
       <section class="mdl-layout__tab-panel is-active" id="scroll-tab-1">
         <div class="page-content"> 
-            <img src="https://img.fotocommunity.com/opa-3e9e2cb1-8f40-4e71-bd33-67319da74585.jpg?width=1000" alt="Mein Bild">
+            
         
         </div>
       </section>
