--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <a href="#scroll-tab-4" class="mdl-layout__tab">Tab 4</a>
         <a href="#scroll-tab-5" class="mdl-layout__tab">Tab 5</a>
         <a href="#scroll-tab-6" class="mdl-layout__tab">Tab 6</a>
+          <h1> <a href= "#Schule> Schule </h1>
       </div>
     </header>
     <div class="mdl-layout__drawer">
@@ -39,7 +40,7 @@
         
         </div>
       </section>
-      <section class="mdl-layout__tab-panel" id="scroll-tab-2">
+      <section class="mdl-layout__tab-panel" id="Schule">
         <div class="page-content"><!-- Your content goes here --></div>
       </section>
       <section class="mdl-layout__tab-panel" id="scroll-tab-3">
