--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <header class="mdl-layout__header">
       <div class="mdl-layout__header-row">
         <!-- Title -->
-        <span class="mdl-layout-title">Title</span>
+        <span class="mdl-layout-title">Hallo </span>
       </div>
       <!-- Tabs -->
       <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
         <a href="#scroll-tab-1" class="mdl-layout__tab is-active">Kein Plan</a>
-        <a href="#scroll-tab-2" class="mdl-layout__tab">Drachenlord</a>
+        <a href="#scroll-tab-2" class="mdl-layout__tab">Schule</a>
         <a href="#scroll-tab-3" class="mdl-layout__tab">Tab 3</a>
         <a href="#scroll-tab-4" class="mdl-layout__tab">Tab 4</a>
         <a href="#scroll-tab-5" class="mdl-layout__tab">Tab 5</a>
@@ -31,7 +31,7 @@
       </div>
     </header>
     <div class="mdl-layout__drawer">
-      <span class="mdl-layout-title">Title</span>
+      <span class="mdl-layout-title">Moin</span>
     </div>
     <main class="mdl-layout__content">
       <section class="mdl-layout__tab-panel is-active" id="scroll-tab-1">
